[package]
name = "kode_compiler"
version = "0.1.0"
edition = "2024"  # Changed from 2024 as it's not released yet
authors = ["Your Name <your.email@example.com>"]
description = "A compiler for the Kode programming language"
readme = "README.md"
license = "MIT"

[dependencies]
# Core dependencies
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.0", features = ["derive"] }
anyhow = "1.0.57"

# LLVM dependencies
llvm-sys = { version = "140", features = ["prefer-static", "no-llvm-linking"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }

[build-dependencies]
bindgen = "0.69.1"

[features]
default = ["llvm14-0"]
llvm14-0 = []

[[bin]]
name = "kode"
path = "src/main.rs"